--- a/src/entities/ButtonDefault/ButtonDefault.scss
+++ b/src/entities/ButtonDefault/ButtonDefault.scss
@@ -4,7 +4,7 @@
   background: styles.$royalBlue;
   border-radius: 12px;
 
-  width: 100%;
+  width: -webkit-fill-available;
   padding: 13px;
 
   display: flex;
