feat: adding signIn page and fixing bugs

--- a/src/entities/ButtonDefault/ButtonDefault.scss
+++ b/src/entities/ButtonDefault/ButtonDefault.scss
@@ -14,8 +14,10 @@
 
   &__btn {
     background: transparent;
-
     color: white;
+
+    user-select: none;
+    cursor: pointer;
 
     border: none;
 
