feat: forgot and reset password pages

--- a/src/entities/InputDefault/InputDefault.scss
+++ b/src/entities/InputDefault/InputDefault.scss
@@ -5,5 +5,9 @@
 }
 
 .inputsRequired {
-  @include styles.inputsRequired;
+  @include styles.inputsActionStyles("error");
+}
+
+.inputsSuccess {
+  @include styles.inputsActionStyles("success");
 }
