--- a/src/feature/SignInFooter/SignInFooter.scss
+++ b/src/feature/SignInFooter/SignInFooter.scss
@@ -1,3 +1,5 @@
+@use "@/shared/styles";
+
 .signInFooter {
   margin-top: 16px;
 
@@ -8,5 +10,9 @@
   &__loginBtn {
     margin-top: 8px;
     text-align: center;
+  }
+
+  &__link {
+    @include styles.authLinks;
   }
 }
