--- a/src/feature/ForgotPassFooter/ForgotPassFooter.scss
+++ b/src/feature/ForgotPassFooter/ForgotPassFooter.scss
@@ -1,14 +1,13 @@
 @use "@/shared/styles";
 
-.termsCheckbox {
+.forgotPassFooter {
   display: flex;
+  flex-direction: column;
   align-items: center;
 
-  &__checkbox {
-    margin-right: 8px;
-  }
-
   &__link {
+    margin-top: 8px;
+
     @include styles.authLinks;
   }
 }
