--- a/src/feature/LoginFooter/LoginFooter.scss
+++ b/src/feature/LoginFooter/LoginFooter.scss
@@ -7,7 +7,7 @@
 
   margin-top: 16px;
 
-  &__resetPassword {
+  &__forgotPassword {
     color: black;
     text-decoration: none;
     text-align: center;
@@ -22,6 +22,6 @@
   }
 
   &__linkForgotPassword {
-    color: styles.$havelockBlue;
+    @include styles.authLinks;
   }
 }
